--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A proxy server for the gallery web app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon --exec npx ts-node src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.6",
     "express": "^4.18.1",
+    "nodemon": "^2.0.19",
     "ts-node": "^10.9.1"
   }
 }
