--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A proxy server for the gallery web app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec npx ts-node src/app.ts"
+    "dev": "nodemon --exec npx ts-node src/app.ts",
+    "build": "tsc",
+    "start": "node ./bin/app.js"
   },
   "repository": {
     "type": "git",
@@ -20,8 +21,12 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.6",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "node-fetch": "^3.2.9",
     "nodemon": "^2.0.19",
-    "ts-node": "^10.9.1"
-  }
+    "ts-node": "^10.9.1",
+    "unsplash-js": "^7.0.15"
+  },
+  "type": "module"
 }
